# LLM-Niza-Classifier

./: .gitignore  README.md  pyproject.toml  response.json
docs/diagrams/: diagram-components-clouds.excalidraw
docs/postman/: Microservices-Docs.postman_collection.json  Niza-Backend.postman_collection.json
src/: app.py  clasificacion_niza.py  data_manager.py  db_manager.py  debug_app.py  flask_app.py  llm_huggingface.py  niza_info.py  pdf_generator.py  pyproject.toml  style.css  test_app.py  utils.py
src/LLM-microservice/: .env.template  main.py  requirements.txt
src/LLM-microservice/core/: app.py
src/LLM-microservice/security/: api_key_management.py  credentials_manager.py
src/LLM-microservice/utils/: definitions.py
src/backend/: .dockerignore  .env.template  Dockerfile  main.py  requirements.txt
src/backend/core/: app.py
src/backend/database/: db_connector.py
src/backend/security/: api_key_management.py  credentials_manager.py
src/backend/sql/: insert_emprendedores.sql
src/database/: schema.sql  view.sql
src/frontend/: .env.template  Dockerfile  app.js  index.html  package.json  styles.css  tablero.html  vite.config.js
src/frontend/conf/: httpd.conf
src/frontend/public/: .htaccess
src/frontend/src/: App.jsx  main.jsx
src/frontend/src/components/: Dashboard.jsx  Footer.jsx  Header.jsx  Loader.jsx  Sidebar.jsx  Step1.jsx  Step2.jsx  Step3.jsx  Step4.jsx
src/frontend/src/services/: backendService.js  llmService.js
src/repl_nix_workspace.egg-info/: PKG-INFO  requires.txt
src/templates/: pdf_template.html
(+3 files in other folders)
